So the relay server was usable?